# conveyor

./: .gitignore  README.md  go.mod  go.sum  justfile
.github/: renovate.json
.github/workflows/: _app-test-lint.yaml  _e2e-tests.yaml  _native-app-test-lint.yaml  _sync-server-test-lint.yaml  release.yaml  (+4 more)
.scripts/: TOOL_VERSIONS  api.justfile  database.justfile  install-just.sh  oci.justfile
CHANGELOG/: CHANGELOG-0.36.0.md  CHANGELOG-v0.1.0.md  CHANGELOG-v0.1.1.md  CHANGELOG-v0.1.2.md  CHANGELOG-v0.1.3.md  CHANGELOG-v0.1.4.md  CHANGELOG-v0.1.5.md  CHANGELOG-v0.10.0.md  CHANGELOG-v0.11.0.md  CHANGELOG-v0.12.0.md  CHANGELOG-v0.12.1.md  CHANGELOG-v0.12.2.md  CHANGELOG-v0.12.3.md  CHANGELOG-v0.12.4.md  CHANGELOG-v0.13.0.md  CHANGELOG-v0.14.0.md  CHANGELOG-v0.14.1.md  CHANGELOG-v0.14.2.md  CHANGELOG-v0.14.3.md  CHANGELOG-v0.14.4.md  CHANGELOG-v0.14.5.md  CHANGELOG-v0.15.0.md  CHANGELOG-v0.15.1.md  CHANGELOG-v0.16.0.md  CHANGELOG-v0.16.1.md  CHANGELOG-v0.16.2.md  CHANGELOG-v0.17.0.md  CHANGELOG-v0.18.0.md  CHANGELOG-v0.18.1.md  CHANGELOG-v0.18.2.md  CHANGELOG-v0.18.3.md  CHANGELOG-v0.19.0.md  CHANGELOG-v0.19.1.md  CHANGELOG-v0.19.2.md  CHANGELOG-v0.19.3.md  CHANGELOG-v0.2.0.md  CHANGELOG-v0.2.1.md  CHANGELOG-v0.2.2.md  CHANGELOG-v0.2.3.md  CHANGELOG-v0.2.4.md  (+90 more)
api/: auth.v1.openapi3.yaml  memos.v1.openapi3.yaml  sync.v1.openapi3.yaml
app/: assets_dev.go  biome.json  index.html  justfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  ui.go  vite.config.ts  vitest.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/permissions/: sqlite.toml
app/src-tauri/src/: lib.rs
app/src-tauri/src/sqlite/: commands.rs  error.rs  mod.rs  wrapper.rs
app/src-tauri/src/sqlite/decode/: mod.rs
deployment/: Dockerfile  Dockerfile.dockerignore
server/: .gitignore  .golangci.yml  go.mod  go.sum  justfile
ui/: assets.go  assets_dev.go  biome.json  justfile  package-lock.json  package.json  tailwind.config.js  tsconfig.json  ui.go  ui_root_root_template.go  ui_root_root_template_dev.go  vite.config.ts
(+1160 files in other folders)
